// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StatsTestCases should print correct stats for auxiliary-files-test 1`] = `
"PublicPath: auto
asset bundle.js 2.78 KiB {909} [emitted] (name: main)
asset f7f4f00355f310234f70.png 7 bytes {909} [emitted] [from: raw.png] (name: main)
Entrypoint main 2.78 KiB = bundle.js
chunk {909} bundle.js (main) [entry]
  ./raw.png [193] {909}
    [no exports]
    [used exports unknown]
    esm import ./raw.png [10]
  ./index.js [10] {909}
    [no exports]
    [used exports unknown]
    entry ./index
  ./stringModule.js [151] {909}
    [no exports]
    [used exports unknown]
    esm import ./stringModule [10]
./raw.png [193] {909}
  [no exports]
  [used exports unknown]
  esm import ./raw.png [10]
./index.js [10] {909}
  [no exports]
  [used exports unknown]
  entry ./index
./stringModule.js [151] {909}
  [no exports]
  [used exports unknown]
  esm import ./stringModule [10]
webpack/runtime/global {909}
  [no exports]
  [used exports unknown]
webpack/runtime/auto_public_path {909}
  [no exports]
  [used exports unknown]
webpack/runtime/make_namespace_object {909}
  [no exports]
  [used exports unknown]
  
Rspack compiled successfully (57eb596eb6f40acaf334)"
`;

exports[`StatsTestCases should print correct stats for builtin-swc-loader-parse-error 1`] = `
"ERROR in ./index.ts
  × Module build failed:
  ├─▶   ×
  │     │   x Expected '{', got 'error'
  │     │    ,-[Xdir/builtin-swc-loader-parse-error/index.ts:1:1]
  │     │  1 | export error;
  │     │    :        ^^^^^
  │     │    \`----
  │     │
  │   
  ╰─▶ Syntax Error
  help: File was processed with this loader: 'builtin:swc-loader??ruleSet[1].rules[0].use[0]'

Rspack compiled with 1 error"
`;

exports[`StatsTestCases should print correct stats for css-concat-error 1`] = `
"PublicPath: auto
asset main.js 654 bytes [emitted] (name: main)
Entrypoint main 654 bytes = main.js

ERROR in × Resolve error: Can't resolve './src' in 'Xdir/css-concat-error'

Rspack x.x.x compiled with 1 error in X s (6a173f34164e1af948e4)"
`;

exports[`StatsTestCases should print correct stats for filename 1`] = `
"PublicPath: auto
asset 521.xxxx.js 335 bytes [emitted]
asset 909.xxxx.js 8.74 KiB [emitted] (name: main)
Entrypoint main 8.74 KiB = 909.xxxx.js
runtime modules 11 modules
./index.js
./dynamic.js
Rspack x.x.x compiled successfully in X s (caf82b4e1767b4699a6c)"
`;

exports[`StatsTestCases should print correct stats for hot+production 1`] = `
"PublicPath: auto
asset main.js 32.2 KiB [emitted] (name: main)
Entrypoint main 32.2 KiB = main.js
runtime modules 11 modules
./index.js
Rspack x.x.x compiled successfully in X s (68e01ffb94a6b5683661)"
`;

exports[`StatsTestCases should print correct stats for ignore-plugin 1`] = `
"runtime modules 1 module
./index.js
./locals/en.js
Xdir/ignore-plugin/locals|Some(\\"\\")|Some(\\"\\")|ContextOptions|Sync|true|Some(RspackRegex(\\"^\\\\\\\\.\\\\\\\\/.*$\\"))|\\"^\\\\\\\\.\\\\\\\\/.*$\\"|None|None|CommonJS|\\"./locals\\"|\\"./locals\\"|Unset|None"
`;

exports[`StatsTestCases should print correct stats for ignore-warning 1`] = `"Rspack compiled successfully"`;

exports[`StatsTestCases should print correct stats for issue-3558 1`] = `"Rspack compiled successfully"`;

exports[`StatsTestCases should print correct stats for legacy-ie-css-warning 1`] = `"Rspack compiled successfully"`;

exports[`StatsTestCases should print correct stats for let-keyword-as-variable-name-error 1`] = `
"ERROR in ./index.js
  × Module parse failed:
  ╰─▶   × JavaScript parsing error: \`let\` cannot be used as an identifier in strict mode
         ╭────
       1 │ let let = let;
         ·           ───
         ╰────
      
  help: 
        You may need an appropriate loader to handle this file type.

ERROR in ./index.js
  × Module parse failed:
  ╰─▶   × JavaScript parsing error: \`let\` cannot be used as an identifier in strict mode
         ╭────
       1 │ let let = let;
         ·     ───
         ╰────
      
  help: 
        You may need an appropriate loader to handle this file type.

Rspack compiled with 2 errors"
`;

exports[`StatsTestCases should print correct stats for limit-chunk-count-plugin 1`] = `
"1 chunks:
  PublicPath: auto
  asset bundle1.js 3.49 KiB [emitted] (name: main)
  Entrypoint main 3.49 KiB = bundle1.js
  chunk bundle1.js (main) <{909}> >{909}< [entry]
    ./b.js
    ./c.js
    ./d.js
    ./e.js
    ./index.js
  1 chunks (Rspack x.x.x) compiled successfully in X s (10795a915d1dcb2bd3ba)

2 chunks:
  PublicPath: auto
  asset 76.bundle2.js 485 bytes [emitted] (name: c)
  asset bundle2.js 10.1 KiB [emitted] (name: main)
  Entrypoint main 10.1 KiB = bundle2.js
  chunk 76.bundle2.js (c) <{76}> <{909}> >{76}<
    ./c.js
    ./d.js
    ./e.js
  chunk bundle2.js (main) >{76}< [entry]
    ./b.js
    ./index.js
  2 chunks (Rspack x.x.x) compiled successfully in X s (538b6f593daca0566997)

3 chunks:
  PublicPath: auto
  asset 345.bundle3.js 182 bytes [emitted]
  asset 76.bundle3.js 379 bytes [emitted] (name: c)
  asset bundle3.js 10.1 KiB [emitted] (name: main)
  Entrypoint main 10.1 KiB = bundle3.js
  chunk 345.bundle3.js <{76}>
    ./d.js
    ./e.js
  chunk 76.bundle3.js (c) <{909}> >{345}<
    ./c.js
  chunk bundle3.js (main) >{76}< [entry]
    ./b.js
    ./index.js
  3 chunks (Rspack x.x.x) compiled successfully in X s (c7fa9ebae988af806f63)

4 chunks:
  PublicPath: auto
  asset 697.bundle4.js 128 bytes [emitted]
  asset 753.bundle4.js 128 bytes [emitted]
  asset 76.bundle4.js 379 bytes [emitted] (name: c)
  asset bundle4.js 10.1 KiB [emitted] (name: main)
  Entrypoint main 10.1 KiB = bundle4.js
  chunk 697.bundle4.js <{76}>
    ./e.js
  chunk 753.bundle4.js <{76}>
    ./d.js
  chunk 76.bundle4.js (c) <{909}> >{697}< >{753}<
    ./c.js
  chunk bundle4.js (main) >{76}< [entry]
    ./b.js
    ./index.js
  4 chunks (Rspack x.x.x) compiled successfully in X s (414de655061e8a9859a0)"
`;

exports[`StatsTestCases should print correct stats for logging-loader 1`] = `
"DEBUG LOG from TestLoader|Xdir/logging-loader/index.js
<-> group
  <i> info something
      log something
    -------
"
`;

exports[`StatsTestCases should print correct stats for minify-error 1`] = `
"ERROR in × JavaScript parsing error: Expected a semicolon
   ╭─[1:1]
 1 │ const a {}
   ·         ─
 2 │ (function() {
 3 │ var __webpack_modules__ = {
   ╰────

Rspack compiled with 1 error"
`;

exports[`StatsTestCases should print correct stats for named-chunk-group 1`] = `
"Entrypoint main 8.71 KiB = main.js
Chunk Group cimanyd 335 bytes = cimanyd.js"
`;

exports[`StatsTestCases should print correct stats for nonexistent-import-source-error 1`] = `
"ERROR in ./index.js
  × Resolve error: Can't resolve 'not-exist' in 'Xdir/nonexistent-import-source-error'
   ╭────
 1 │ import \\"not-exist\\";
   ·        ───────────
   ╰────

Rspack compiled with 1 error"
`;

exports[`StatsTestCases should print correct stats for optimization-runtime-chunk 1`] = `
"Entrypoint e1 3.81 KiB = e1~runtime.js 3.48 KiB e1.js 336 bytes
Entrypoint e2 3.81 KiB = e2~runtime.js 3.48 KiB e2.js 336 bytes
chunk e1.js (e1) [entry]
chunk e1~runtime.js (e1~runtime) [initial]
chunk e2.js (e2) [entry]
chunk e2~runtime.js (e2~runtime) [initial]"
`;

exports[`StatsTestCases should print correct stats for optimization-runtime-chunk-multiple 1`] = `
"Entrypoint e1 3.81 KiB = runtime~e1.js 3.48 KiB e1.js 336 bytes
Entrypoint e2 3.81 KiB = runtime~e2.js 3.48 KiB e2.js 336 bytes
chunk e1.js (e1) [entry]
chunk e2.js (e2) [entry]
chunk runtime~e1.js (runtime~e1) [initial]
chunk runtime~e2.js (runtime~e2) [initial]"
`;

exports[`StatsTestCases should print correct stats for optimization-runtime-chunk-single 1`] = `
"Entrypoint e1 3.81 KiB = runtime.js 3.48 KiB e1.js 336 bytes
Entrypoint e2 3.81 KiB = runtime.js 3.48 KiB e2.js 336 bytes
chunk e1.js (e1) [entry]
chunk e2.js (e2) [entry]
chunk runtime.js (runtime) [initial]"
`;

exports[`StatsTestCases should print correct stats for optimization-runtime-chunk-true 1`] = `
"Entrypoint e1 3.81 KiB = runtime~e1.js 3.48 KiB e1.js 336 bytes
Entrypoint e2 3.81 KiB = runtime~e2.js 3.48 KiB e2.js 336 bytes
chunk e1.js (e1) [entry]
chunk e2.js (e2) [entry]
chunk runtime~e1.js (runtime~e1) [initial]
chunk runtime~e2.js (runtime~e2) [initial]"
`;

exports[`StatsTestCases should print correct stats for parse-error 1`] = `
"ERROR in ./b.js
  × Module parse failed:
  ╰─▶   × JavaScript parsing error: Expected ';', '}' or <eof>
         ╭─[4:1]
       4 │ includes
       5 │ a
       6 │ parser )
         ·        ─
       7 │ error
       8 │ in
         ╰────
      
  help: 
        You may need an appropriate loader to handle this file type.

Rspack compiled with 1 error"
`;

exports[`StatsTestCases should print correct stats for reasons 1`] = `
"./a.js
  cjs require ./a
./index.js
  entry ./index"
`;

exports[`StatsTestCases should print correct stats for resolve-overflow-error 1`] = `
"PublicPath: auto
asset main.js 1.46 KiB [emitted] (name: main)
Entrypoint main 1.46 KiB = main.js
runtime modules 1 module
./index.js

ERROR in ./index.js
  × Resolve error: Can't resolve 'cycle-alias/a' in 'Xdir/resolve-overflow-error'
   ╭─[1:1]
 1 │ import { a } from \\"cycle-alias/a\\";
   ·                   ───────────────
 2 │ console.log(a);
   ╰────
  help: maybe it had cyclic aliases

Rspack x.x.x compiled with 1 error in X s (b83610ec401765d7f9ef)"
`;

exports[`StatsTestCases should print correct stats for resolve-unexpected-exports-in-pkg-error 1`] = `
"PublicPath: auto
asset bundle.js 1.46 KiB [emitted] (name: main)
Entrypoint main 1.46 KiB = bundle.js
runtime modules 1 module
./index.js

ERROR in ./index.js
  × Invalid \\"exports\\" target \\"../../index.js\\" defined for '.' in the package config Xdir/resolve-unexpected-exports-in-pkg-error/node_modules/pkg-a/package.json

Rspack x.x.x compiled with 1 error in X s (c1888f6bacf659a49dc3)"
`;

exports[`StatsTestCases should print correct stats for runtime-modules 1`] = `
"./index.js
webpack/runtime/has_own_property
webpack/runtime/make_namespace_object
webpack/runtime/define_property_getters"
`;

exports[`StatsTestCases should print correct stats for runtime-specific-exports 1`] = `
"PublicPath: auto
asset main.js 1.69 KiB [emitted] (name: main)
Entrypoint main 1.69 KiB = main.js
./math.js
  [exports: add, multiply]
  [only some exports used: add]
./example.js
  [no exports]
  [no exports used]
./increment.js
  [exports: decrement, increment, incrementBy2]
  [only some exports used: increment]
Rspack x.x.x compiled successfully in X s (781b6a11a8ec452188ee)"
`;

exports[`StatsTestCases should print correct stats for side-effects-bailouts 1`] = `
"PublicPath: auto
asset main.js 1.69 KiB {909} [emitted] (name: main)
Entrypoint main 1.69 KiB = main.js
chunk {909} main.js (main) [entry]
  ./lib.js [467] {909}
    [exports: test]
    [all exports used]
    Statement with side_effects in source code at ./lib.js:3:0-9
    esm import ./lib.js [10]
    esm import specifier ./lib.js [10]
  ./index.js [10] {909}
    [no exports]
    [no exports used]
    entry ./index.js
./lib.js [467] {909}
  [exports: test]
  [all exports used]
  Statement with side_effects in source code at ./lib.js:3:0-9
  esm import ./lib.js [10]
  esm import specifier ./lib.js [10]
./index.js [10] {909}
  [no exports]
  [no exports used]
  entry ./index.js
webpack/runtime/has_own_property {909}
  [no exports]
  [used exports unknown]
webpack/runtime/define_property_getters {909}
  [no exports]
  [used exports unknown]
  
1970-04-20 12:42:42: Rspack x.x.x compiled successfully in X s (aa839c2ab732086cca33)"
`;

exports[`StatsTestCases should print correct stats for simple-export 1`] = `
"PublicPath: auto
asset bundle.js 1.79 KiB [emitted] (name: main)
Entrypoint main 1.79 KiB = bundle.js
runtime modules 3 modules
./index.js
Rspack x.x.x compiled successfully in X s (28af2d7a47e4039ec00e)"
`;

exports[`StatsTestCases should print correct stats for simple-module-source 1`] = `
"PublicPath: auto
asset bundle.js 2.32 KiB [emitted] (name: main)
Entrypoint main 2.32 KiB = bundle.js
runtime modules 4 modules
./raw.png
./index.js
./stringModule.js
Rspack compiled successfully (4e8727ef8ec09b0633f9)"
`;

exports[`StatsTestCases should print correct stats for stats-hooks 1`] = `
"PublicPath: auto
asset main.js 1.78 KiB [emitted111] (name: main) [testA: aaaaaa]
Entrypoint main 1.78 KiB = main.js
runtime modules 3 modules
./index.js
Rspack compiled successfully (1767e12820b733a752da)"
`;

exports[`StatsTestCases should print correct stats for try-require-module 1`] = `
"WARNING in ./index.js
  ⚠ Resolve error: Can't resolve './missing-module' in 'Xdir/try-require-module'
   ╭─[1:1]
 1 │ try {
 2 │     require('./missing-module');
   ·     ───────────────────────────
 3 │ } catch (e) {}
   ╰────

Rspack compiled with 1 warning"
`;

exports[`StatsTestCases should print correct stats for try-require-resolve-module 1`] = `
"WARNING in ./index.js
  ⚠ Resolve error: Can't resolve './missing-module' in 'Xdir/try-require-resolve-module'
   ╭─[1:1]
 1 │ try {
 2 │     require.resolve('./missing-module');
   ·     ───────────────────────────────────
 3 │ } catch (e) {}
   ╰────

Rspack compiled with 1 warning"
`;

exports[`StatsTestCases should print correct stats for try-require-resolve-weak-module 1`] = `
"WARNING in ./index.js
  ⚠ Resolve error: Can't resolve './missing-module' in 'Xdir/try-require-resolve-weak-module'
   ╭─[1:1]
 1 │ try {
 2 │     require.resolveWeak('./missing-module');
   ·     ───────────────────────────────────────
 3 │ } catch (e) {}
   ╰────

Rspack compiled with 1 warning"
`;
